css/style.css
* {
	border: 1px solid white;
}

body,
button {
	font-family: 'Inconsolata', sans-serif;
}

.text-item,
button {
	border: 1px solid black;
	border-radius: 8px;
	font-size: 1em;
	font-weight: 700;
}

.main-title {
	height: 10em;
	width: 30em;
	margin: 0 auto;
	text-align: center;
}

.main-title h1 {
	margin-top: 0.50em;
	margin-bottom: 0;
	font-size: 4em;
	font-weight: 700;
}

.main-title p {
	margin-top: 0.5em;
	font-size: 1.25em;
	font-weight: 400;
}

.item-form {
	height: 4em;
	width: 60em;
	margin: 0 auto;
	text-align: center;
}

.text-item {
	height: 2em;
	width: 40em;
	margin-top: 1.20em
}


#add-button {
	margin-left: 4em;
}

.listings {
	
	height: 45em;
	width: 100%;
}

.listings h3 {
	text-align: center;
	font-size: 2em;
	font-weight: 700;
}

.list-area {
	border: 4px solid black;
	border-radius: 8px;
	height: 33.70em;
	width: 100%;
}

.ready,
.done {
	height: 40em;
	width: 40em;

}

.ready {
	margin-left: 10em;
	float: left;
	text-align: left;
}

.done {
	margin-right: 10em;
	float: right;
	text-align: left;
}

.move-buttons {
	width: 12em;
	display: block;
	margin: 10em auto;
	text-align: center;
}

#add-button,
#move-ready,
#move-done,
#trash {
	padding: 0.5em; 
}

#move-ready,
#move-done,
#trash {
	width: 9em;
	margin: 3em 1em;
}

